mengubah judul nama

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- jumbotron -->
     <div class="jumbotron text-center">
       <img src="img/profile.jpg" class="img-circle" />
-      <h1>Demo Name</h1>
+      <h1>Nama Saya</h1>
       <p>Lecture | Web Developer</p>
     </div>
     <!-- akhir jumbotron -->
